enhance Dockerfile by adding necessary PHP extensions and tools, and install Composer

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,17 +1,32 @@
 # Use the official PHP image with Apache
-FROM php:8.2-apache
+FROM php:8.2-apache-bullseye
 
-# Install necessary PHP extensions
-RUN docker-php-ext-install pdo pdo_mysql
+# Install necessary PHP extensions and tools
+RUN apt-get update && apt-get install -y \
+    libzip-dev \
+    unzip \
+    git \
+    && docker-php-ext-install pdo pdo_mysql zip \
+    && docker-php-ext-enable pdo_mysql
 
 # Enable Apache rewrite module
 RUN a2enmod rewrite
 
-# Copy the application files to the container
+# Install Composer
+COPY --from=composer:2.6 /usr/bin/composer /usr/bin/composer
+
+# Set working directory
+WORKDIR /var/www/html
+
+# Copy application files
 COPY ../ /var/www/html
 
-# Set the working directory
-WORKDIR /var/www/html
+# Set permissions for the application
+RUN chown -R www-data:www-data /var/www/html \
+    && chmod -R 755 /var/www/html
 
 # Expose port 80
 EXPOSE 80
+
+# Start Apache in the foreground
+CMD ["apache2-foreground"]
